# cmaker

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
cmake/: embedded_package.cmake  iwyu.cmake
package/: .gitignore  CMakeLists.txt  Makefile  _usage.txt  cmake_version.cmake  main.cpp  src_#PROJECT_NAME.cpp  src_#PROJECT_NAME.h  src_CMakeLists.txt  src_args.h  src_string_helper.h  src_strings_helper.h  src_tuple_hash.h  test_#PROJECT_NAME_test.cpp  test_CMakeLists.txt  test_string_helper_test.cpp  test_test_cases.h
package/files/: CMakeLists.txt  main.cpp  src_#PROJECT_NAME.cpp  src_#PROJECT_NAME.h  src_CMakeLists.txt  src_release_assert.h  test_#PROJECT_NAME.cpp  test_CMakeLists.txt
src/: CMakeLists.txt  args.h  cmaker.cpp  cmaker.h  release_assert.h  strings_helper.h
test/: CMakeLists.txt  args_test.cpp  cmaker_test.cpp  string_helper_test.cpp  test_cases.h
